app/cgen/FractalParser.js
// Generated from Fractal.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import FractalVisitor from './FractalVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class FractalParser extends antlr4.Parser {

    static grammarFileName = "Fractal.g4";
    static literalNames = [ null, "'.'", "'set'", "'to'", "'default'", "'block'", 
                            "':'", "'end'", "'par'", "'dyn'", "'reduce'", 
                            "'mod'", "'escapes'", "'vanishes'", "'if'", 
                            "'then'", "'else'", "'do'", "'until'", "'on'", 
                            "'repeat'", "'times'", "'checkered'", "'disc'", 
                            "'period 3 cycle'", "'red'", "'green'", "'blue'", 
                            "'omega'", "'omegabar'", "'Purple'", "'White'", 
                            "'Orange'", "'['", "'|'", "']'", "'is'", "'real'", 
                            "'integer'", "'probe'", "'\"'", "'report'", 
                            "'\\u2206'", null, null, null, "'stops'", "'pixel'", 
                            "'iterate'", "'exp'", "'cos'", "'sin'", "'tan'", 
                            "'cosh'", "'sinh'", "'tanh'", "'re'", "'im'", 
                            "'bar'", "'arg'", "'log'", "'sqrt'", "'arccos'", 
                            "'arcsin'", "'arctan'", "'^'", "'+'", "'-'", 
                            "'*'", "'/'", "'='", "'>'", "'<'", "'or'", "'and'", 
                            "'xor'", null, "'('", "')'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, "POS_INT", "NUMBER", "CPX_NUMBER_IM", 
                             "STOPS", "PIXEL", "ITERATE", "EXP", "COS", 
                             "SIN", "TAN", "COSH", "SINH", "TANH", "RE", 
                             "IM", "BAR", "ARG", "LOG", "SQRT", "ARCCOS", 
                             "ARCSIN", "ARCTAN", "POW", "PLUS", "MINUS", 
                             "TIMES", "DIVIDE", "EQUALS", "GT", "LT", "OR", 
                             "AND", "XOR", "VARIABLE", "LPAREN", "RPAREN", 
                             "WS", "COMMENT" ];
    static ruleNames = [ "script", "command", "n", "constant", "variable", 
                         "cpx_number_re", "cpx_number_im", "atom", "cpx_function", 
                         "real_function", "expression", "condition", "if_then", 
                         "loop", "flagname", "color", "color_command", "num_type", 
                         "probe_command", "saddle_drop" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FractalParser.ruleNames;
        this.literalNames = FractalParser.literalNames;
        this.symbolicNames = FractalParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 10:
    	    		return this.expression_sempred(localctx, predIndex);
    	case 11:
    	    		return this.condition_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 8);
    		case 1:
    			return this.precpred(this._ctx, 7);
    		case 2:
    			return this.precpred(this._ctx, 6);
    		case 3:
    			return this.precpred(this._ctx, 5);
    		case 4:
    			return this.precpred(this._ctx, 9);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    condition_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 5:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	script() {
	    let localctx = new ScriptContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, FractalParser.RULE_script);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 43; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 40;
	            this.command();
	            this.state = 41;
	            this.match(FractalParser.T__0);
	            this.state = 45; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1196916) !== 0) || _la===33 || _la===48);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, FractalParser.RULE_command);
	    var _la = 0;
	    try {
	        this.state = 72;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	            localctx = new SET_TO_COMContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 47;
	            this.match(FractalParser.T__1);
	            this.state = 48;
	            this.variable();
	            this.state = 49;
	            this.match(FractalParser.T__2);
	            this.state = 50;
	            this.expression(0);
	            break;
	        case 4:
	            localctx = new DEFAULT_TO_COMContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 52;
	            this.match(FractalParser.T__3);
	            this.state = 53;
	            this.variable();
	            this.state = 54;
	            this.match(FractalParser.T__2);
	            this.state = 55;
	            this.expression(0);
	            break;
	        case 5:
	        case 6:
	            localctx = new BLOCK_COMContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 57;
	            _la = this._input.LA(1);
	            if(!(_la===5 || _la===6)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 59; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 58;
	                this.command();
	                this.state = 61; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1196916) !== 0) || _la===33 || _la===48);
	            this.state = 63;
	            this.match(FractalParser.T__6);
	            break;
	        case 33:
	            localctx = new COLOR_COMContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 65;
	            this.color_command();
	            break;
	        case 8:
	            localctx = new PAR_COMContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 66;
	            this.match(FractalParser.T__7);
	            this.state = 67;
	            this.command();
	            break;
	        case 9:
	            localctx = new DYN_COMContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 68;
	            this.match(FractalParser.T__8);
	            this.state = 69;
	            this.command();
	            break;
	        case 14:
	            localctx = new IF_THEN_COMContext(this, localctx);
	            this.enterOuterAlt(localctx, 7);
	            this.state = 70;
	            this.if_then();
	            break;
	        case 17:
	        case 20:
	        case 48:
	            localctx = new LOOP_COMContext(this, localctx);
	            this.enterOuterAlt(localctx, 8);
	            this.state = 71;
	            this.loop();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	n() {
	    let localctx = new NContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, FractalParser.RULE_n);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this.match(FractalParser.POS_INT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	constant() {
	    let localctx = new ConstantContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, FractalParser.RULE_constant);
	    try {
	        this.state = 79;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 44:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 76;
	            this.cpx_number_re();
	            break;
	        case 45:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 77;
	            this.cpx_number_im();
	            break;
	        case 43:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 78;
	            this.n();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable() {
	    let localctx = new VariableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, FractalParser.RULE_variable);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 81;
	        this.match(FractalParser.VARIABLE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cpx_number_re() {
	    let localctx = new Cpx_number_reContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, FractalParser.RULE_cpx_number_re);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83;
	        this.match(FractalParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cpx_number_im() {
	    let localctx = new Cpx_number_imContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, FractalParser.RULE_cpx_number_im);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        this.match(FractalParser.CPX_NUMBER_IM);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom() {
	    let localctx = new AtomContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, FractalParser.RULE_atom);
	    try {
	        this.state = 89;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 43:
	        case 44:
	        case 45:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 87;
	            this.constant();
	            break;
	        case 76:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 88;
	            this.variable();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cpx_function() {
	    let localctx = new Cpx_functionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, FractalParser.RULE_cpx_function);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91;
	        _la = this._input.LA(1);
	        if(!(((((_la - 49)) & ~0x1f) === 0 && ((1 << (_la - 49)) & 8191) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	real_function() {
	    let localctx = new Real_functionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, FractalParser.RULE_real_function);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 93;
	        _la = this._input.LA(1);
	        if(!(((((_la - 62)) & ~0x1f) === 0 && ((1 << (_la - 62)) & 7) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 20;
	    this.enterRecursionRule(localctx, 20, FractalParser.RULE_expression, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 43:
	        case 44:
	        case 45:
	        case 66:
	        case 67:
	        case 76:
	            localctx = new SIGNED_ATOM_EXPContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 97;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===66 || _la===67) {
	                this.state = 96;
	                _la = this._input.LA(1);
	                if(!(_la===66 || _la===67)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	            }

	            this.state = 99;
	            this.atom();
	            break;
	        case 49:
	        case 50:
	        case 51:
	        case 52:
	        case 53:
	        case 54:
	        case 55:
	        case 56:
	        case 57:
	        case 58:
	        case 59:
	        case 60:
	        case 61:
	            localctx = new CPX_FCN_EXPContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 100;
	            this.cpx_function();
	            this.state = 101;
	            this.match(FractalParser.LPAREN);
	            this.state = 102;
	            this.expression(0);
	            this.state = 103;
	            this.match(FractalParser.RPAREN);
	            break;
	        case 62:
	        case 63:
	        case 64:
	            localctx = new RE_FCN_EXPContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 105;
	            this.real_function();
	            this.state = 106;
	            this.match(FractalParser.LPAREN);
	            this.state = 107;
	            this.expression(0);
	            this.state = 108;
	            this.match(FractalParser.RPAREN);
	            break;
	        case 10:
	            localctx = new REDUCE_MOD_EXPContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 110;
	            this.match(FractalParser.T__9);
	            this.state = 111;
	            this.variable();
	            this.state = 112;
	            this.match(FractalParser.T__10);
	            this.state = 113;
	            this.expression(2);
	            break;
	        case 77:
	            localctx = new PAREN_EXPContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 115;
	            this.match(FractalParser.LPAREN);
	            this.state = 116;
	            this.expression(0);
	            this.state = 117;
	            this.match(FractalParser.RPAREN);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 138;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 136;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new TIMES_EXPContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, FractalParser.RULE_expression);
	                    this.state = 121;
	                    if (!( this.precpred(this._ctx, 8))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
	                    }
	                    this.state = 122;
	                    this.match(FractalParser.TIMES);
	                    this.state = 123;
	                    this.expression(9);
	                    break;

	                case 2:
	                    localctx = new DIVIDE_EXPContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, FractalParser.RULE_expression);
	                    this.state = 124;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 125;
	                    this.match(FractalParser.DIVIDE);
	                    this.state = 126;
	                    this.expression(8);
	                    break;

	                case 3:
	                    localctx = new PLUS_EXPContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, FractalParser.RULE_expression);
	                    this.state = 127;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 128;
	                    this.match(FractalParser.PLUS);
	                    this.state = 129;
	                    localctx.right = this.expression(7);
	                    break;

	                case 4:
	                    localctx = new MINUS_EXPContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, FractalParser.RULE_expression);
	                    this.state = 130;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 131;
	                    this.match(FractalParser.MINUS);
	                    this.state = 132;
	                    this.expression(6);
	                    break;

	                case 5:
	                    localctx = new POW_EXPContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, FractalParser.RULE_expression);
	                    this.state = 133;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 134;
	                    this.match(FractalParser.POW);
	                    this.state = 135;
	                    this.n();
	                    break;

	                } 
	            }
	            this.state = 140;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	condition(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ConditionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 22;
	    this.enterRecursionRule(localctx, 22, FractalParser.RULE_condition, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new COMP_CONDContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 142;
	            this.expression(0);
	            this.state = 150;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 143;
	                this.match(FractalParser.GT);
	                break;

	            case 2:
	                this.state = 144;
	                this.match(FractalParser.LT);
	                break;

	            case 3:
	                this.state = 145;
	                this.match(FractalParser.GT);
	                this.state = 146;
	                this.match(FractalParser.EQUALS);
	                break;

	            case 4:
	                this.state = 147;
	                this.match(FractalParser.LT);
	                this.state = 148;
	                this.match(FractalParser.EQUALS);
	                break;

	            case 5:
	                this.state = 149;
	                this.match(FractalParser.EQUALS);
	                break;

	            }
	            this.state = 152;
	            this.expression(0);
	            break;

	        case 2:
	            localctx = new ESCAPES_CONDContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 154;
	            this.expression(0);
	            this.state = 155;
	            this.match(FractalParser.T__11);
	            break;

	        case 3:
	            localctx = new VANISHES_CONDContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 157;
	            this.expression(0);
	            this.state = 158;
	            this.match(FractalParser.T__12);
	            break;

	        case 4:
	            localctx = new STOPS_CONDContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 160;
	            this.expression(0);

	            this.state = 161;
	            this.match(FractalParser.STOPS);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 170;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,11,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new COMB_CONDContext(this, new ConditionContext(this, _parentctx, _parentState));
	                this.pushNewRecursionContext(localctx, _startState, FractalParser.RULE_condition);
	                this.state = 165;
	                if (!( this.precpred(this._ctx, 1))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                }
	                this.state = 166;
	                _la = this._input.LA(1);
	                if(!(((((_la - 73)) & ~0x1f) === 0 && ((1 << (_la - 73)) & 7) !== 0))) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                this.state = 167;
	                this.condition(2); 
	            }
	            this.state = 172;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,11,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	if_then() {
	    let localctx = new If_thenContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, FractalParser.RULE_if_then);
	    try {
	        this.state = 185;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new IF_THENContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 173;
	            this.match(FractalParser.T__13);
	            this.state = 174;
	            this.condition(0);
	            this.state = 175;
	            this.match(FractalParser.T__14);
	            this.state = 176;
	            this.command();
	            break;

	        case 2:
	            localctx = new IF_THEN_ELSEContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 178;
	            this.match(FractalParser.T__13);
	            this.state = 179;
	            this.condition(0);
	            this.state = 180;
	            this.match(FractalParser.T__14);
	            this.state = 181;
	            this.command();
	            this.state = 182;
	            this.match(FractalParser.T__15);
	            this.state = 183;
	            this.command();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	loop() {
	    let localctx = new LoopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, FractalParser.RULE_loop);
	    var _la = 0;
	    try {
	        this.state = 213;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new LoopDoContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 187;
	            this.match(FractalParser.T__16);
	            this.state = 189; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 188;
	                this.command();
	                this.state = 191; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1196916) !== 0) || _la===33 || _la===48);
	            this.state = 193;
	            this.match(FractalParser.T__17);
	            this.state = 194;
	            this.condition(0);
	            break;
